--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,65 @@
   --text-title-color:#757575;
   --accent-color: #2196f3;
 }
+/* reset */
 
+/* Стили для обнуления верхних отступов у элементов  */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+/* Класс для обнуления базовых свойств у списков (ul)  */
+.list {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+/* Класс для обнуления базовых свойств у ссылок  */
+.link {
+  text-decoration: none;
+  color: inherit;
+}
+
+/* Свойства для корректного отображения картинок  */
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* Свойства для обнуления курсива у address  */
+
+address {
+  font-style: normal;
+}
+
+/* components */
+.container {
+  width: 1360px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 
 body {
@@ -41,6 +99,8 @@ body {
    line-height: calc(16 / 14);
   letter-spacing: 0.02em;
   color: var(--sacondary-title-color);
+display: flex;
+align-items: center;
 }
 .active {
   color: var(--accent-color);
@@ -186,4 +246,8 @@ line-height: calc(36 / 18);
 line-height: calc(30 / 16);
 color: var(--text-title-color);
 
+}
+.footer-address:hover,
+.footer-address:focus {
+  color: var(--accent-color);
 }
