--- a/css/styles.css
+++ b/css/styles.css
@@ -139,10 +139,12 @@ align-items: center;
   color: var(--main-title-color);
 }
 .hero-button {
+  padding: 9px 31px;
+  min-width: 216px;
+  min-height: 50px;
   font-weight: 700;
   font-size: 16px;
   line-height: calc(30 / 16);
-
   letter-spacing: 0.06em;
   color: var(--main-title-color);
   cursor: pointer;
@@ -193,7 +195,7 @@ align-items: center;
 .footer {
   background: #2f303a;
 }
-.logo-footer { 
+.logo-footer {
 }
 .footer-link {
   line-height: calc(24 / 14);
@@ -210,21 +212,32 @@ align-items: center;
 /*-------Портфоліо--*/
 /*-------Фільтри--*/
 .button {
+  padding: 5px 21px;
+  min-width: 125px;
+   min-height: 38px;
     font-size: 16px;
   line-height: calc(26 / 16);
   text-align: center;
   border-style: none;
   cursor: pointer;
+  border-radius: 4px;
 }
 .button:hover,
 .button:focus {
   background-color: var(--accent-color);
   color: var(--main-title-color);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+
 }
 .active-btn {
+padding: 5px 24px;
+  min-width: 72px;
+  min-height: 37px;
   background-color:  var(--accent-color);
-  color: var(--main-title-color);;
+  color: var(--main-title-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
 
 }
 .title-portfolio {
