--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 :root {
-  --main-title-color:  #ffffff;
-  --sacondary-title-color:#212121;
-  --text-title-color:#757575;
+  --main-title-color: #ffffff;
+  --sacondary-title-color: #212121;
+  --text-title-color: #757575;
   --accent-color: #2196f3;
+  --items: 3;
 }
 /**
   |============================
@@ -57,11 +58,6 @@ address {
 }
 
 /* components */
-.container {
-  width: 1360px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
 
 .visually-hidden {
   position: absolute;
@@ -78,7 +74,6 @@ address {
 }
 /* reset and*/
 
-
 .list {
   list-style: none;
 }
@@ -87,59 +82,95 @@ address {
 }
 .section {
   padding-top: 94px;
-  padding-top: 94px;
+  padding-bottom: 94px;
 }
+.container {
+  width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
 
+  outline: 2px solid red;
+  outline-offset: -2px;
+}
 /**
   |============================
   | Шапка сайту
   |============================
 */
-.header {
-  background-color:var(--main-title-color);
+.header-container {
+  display: flex;
+  align-items: center;
 }
 
+.header {
+  background-color: var(--main-title-color);
+}
 .logo {
   font-family: 'Raleway';
-    font-size: 26px;
+  font-size: 26px;
   line-height: 31px;
   letter-spacing: 0.03em;
   color: var(--accent-color);
-}
-.logo-header {
-  color: var(--main-title-color);
+  margin-right: 93px;
 }
 
+.logo-header {
+  color: var(--sacondary-title-color);
+}
+.header-list {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  margin-right: 344px;
+}
+.header-list-cont {
+  display: flex;
+  gap: 50px;
+}
 .nav-link {
+  display: block;
+  padding-top: 52px;
+  padding-bottom: 50px;
   font-weight: 500;
-   line-height: calc(16 / 14);
+  line-height: calc(16 / 14);
   letter-spacing: 0.02em;
   color: var(--sacondary-title-color);
-display: flex;
-align-items: center;
+  align-items: center;
+
+}
+.header-nav {
+  margin-right: auto;
 }
 .active {
   color: var(--accent-color);
 }
 .nav-link:hover,
 .nav-link:focus {
-  color:   var(--accent-color);
+  color: var(--accent-color);
 }
+
+
 .header-mail,
 .header-tel {
   font-weight: 500;
-    line-height: calc(16 / 12);
+  line-height: calc(16 / 12);
   letter-spacing: 0.02em;
   color: var(--text-title-color);
+ margin-right: auto;
 }
+
 .header-mail:hover,
 .header-mail:focus {
   color: #2196f3;
 }
 .header-tel:hover,
 .header-tel:focus {
-  color:  var(--accent-color);
+  color: var(--accent-color);
 }
+
+
 
 /*-------Герой--*/
 .hero {
@@ -178,12 +209,11 @@ align-items: center;
   |============================
 */
 .about-sub-tittle {
-   font-size: 14px;
+  font-size: 14px;
   line-height: calc(16 / 14);
-
 }
 .about-description {
-   line-height: 24px;
+  line-height: 24px;
 
   color: var(--text-title-color);
 }
@@ -192,18 +222,30 @@ align-items: center;
   | Чим займаємось
   |============================
 */
+
+
 .section-title {
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
- }
+  display: block;
+  padding-bottom: 50px;
+}
+.dev-list {
+  display: flex;
+}
+.dev-item:not(:last-child) {
+margin-right: 30px;
+}
+
 /**
   |============================
   | Наша команда
   |============================
 */
+
 .team-title {
-    font-size: 36px;
+  font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
 }
@@ -214,11 +256,12 @@ align-items: center;
   text-align: center;
 }
 .team-description {
-   font-size: 16px;
+  font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
-   color: var(--text-title-color);
+  color: var(--text-title-color);
 }
+
 /**
   |============================
   | Підвал
@@ -228,7 +271,18 @@ align-items: center;
   background: #2f303a;
 }
 .logo-footer {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-size: 26px;
+  line-height: calc(31 / 26);
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
 }
+
+.logo-footer-span {
+  color: var(--main-title-color);
+}
+
 .footer-link {
   line-height: calc(24 / 14);
 
@@ -236,18 +290,23 @@ align-items: center;
   font-style: normal;
 }
 .footer-address {
-    line-height: calc(24 / 14);
+  line-height: calc(24 / 14);
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
 }
 
 /*-------Портфоліо--*/
 /*-------Фільтри--*/
+.list-filters {
+  display: flex;
+  
+
+}
 .button {
   padding: 5px 21px;
   min-width: 125px;
-   min-height: 38px;
-    font-size: 16px;
+  min-height: 38px;
+  font-size: 16px;
   line-height: calc(26 / 16);
   text-align: center;
   border-style: none;
@@ -259,38 +318,27 @@ align-items: center;
   background-color: var(--accent-color);
   color: var(--main-title-color);
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-
 }
 .active-btn {
-padding: 5px 24px;
+  padding: 5px 24px;
   min-width: 72px;
   min-height: 37px;
-  background-color:  var(--accent-color);
+  background-color: var(--accent-color);
   color: var(--main-title-color);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 4px;
-
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 .title-portfolio {
-   font-size: 18px;
-line-height: calc(36 / 18);
-
+  font-size: 18px;
+  line-height: calc(36 / 18);
 }
 .portfolio-description {
   font-size: 16px;
-line-height: calc(30 / 16);
-color: var(--text-title-color);
-
+  line-height: calc(30 / 16);
+  color: var(--text-title-color);
 }
 .footer-address:hover,
 .footer-address:focus {
   color: var(--accent-color);
-}
-
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
 }
