--- a/css/styles.css
+++ b/css/styles.css
@@ -175,8 +175,12 @@ address {
 /*-------Герой--*/
 .hero {
   background-color: #2f303a;
+
 }
 .hero-title {
+  padding-top: 200px;
+  padding-bottom: 30px;
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: calc(60 / 44);
@@ -184,8 +188,10 @@ address {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--main-title-color);
+
 }
 .hero-button {
+
   padding: 9px 31px;
   min-width: 216px;
   min-height: 50px;
@@ -198,16 +204,40 @@ address {
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  width: 216px;
-  height: 50px;
-  border: none;
+    border: none;
   cursor: pointer;
+  text-align: center;
+
+
+}
+.order-button {
+  display:inline-block
+  font-size: 16px;
+  text-align: center;
+  display: flex;
+
+
+
 }
 /**
   |============================
-  | Особливості
+  |        Особливості
   |============================
 */
+
+
+.about-list {
+  display: flax;
+  align-items: center;
+}
+
+.about-tittle {
+  width: 269px;
+  height: 98px;
+
+  padding-right: 30px;
+}
+
 .about-sub-tittle {
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -217,6 +247,8 @@ address {
 
   color: var(--text-title-color);
 }
+
+
 /**
   |============================
   | Чим займаємось
@@ -233,6 +265,8 @@ address {
 }
 .dev-list {
   display: flex;
+  align-items: center;
+
 }
 .dev-item:not(:last-child) {
 margin-right: 30px;
@@ -245,17 +279,26 @@ margin-right: 30px;
 */
 
 .team-title {
+  padding-top: 94px;
+  padding-bottom: 50px;
   font-size: 36px;
   line-height: calc(42 / 36);
   text-align: center;
 }
+.team-lisi {
+  display: flex;
+  gap: 30px
+}
 .team-sub-title {
+  padding-top: 30px;
   font-weight: 500;
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
 }
 .team-description {
+  padding-bottom: 30px;
+  padding-top: 10px;
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
@@ -277,6 +320,8 @@ margin-right: 30px;
   line-height: calc(31 / 26);
   letter-spacing: 0.03em;
   color: var(--accent-color);
+  padding-top: 60px;
+  padding-left: 20px;
 }
 
 .logo-footer-span {
@@ -299,7 +344,7 @@ margin-right: 30px;
 /*-------Фільтри--*/
 .list-filters {
   display: flex;
-  
+
 
 }
 .button {
