--- a/css/styles.css
+++ b/css/styles.css
@@ -194,9 +194,13 @@ address {
   color: var(--accent-color);
 }
 
+/**
+  |============================
+  |      Герой
+  |============================
+*/
 
 
-/*-------Герой--*/
 .hero {
   background-color: #2f303a;
   text-align: center;
@@ -324,8 +328,6 @@ background-color:#F5F4FA;
   margin-bottom: 8px;
 }
 .team-description {
-
-
   font-size: 16px;
   line-height: calc(19 / 16);
   text-align: center;
@@ -392,7 +394,6 @@ background-color:#F5F4FA;
 
 }
 .button {
-
   min-width: 125px;
   min-height: 38px;
   font-size: 16px;
@@ -410,7 +411,7 @@ background-color:#F5F4FA;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .active-btn {
- 
+
   min-width: 72px;
   min-height: 37px;
   background-color: var(--accent-color);
