--- a/css/styles.css
+++ b/css/styles.css
@@ -341,6 +341,7 @@ background-color:#F5F4FA;
 */
 .footer {
   background: #2f303a;
+  padding: 60px 0;
 }
 
 .logo-footer {
@@ -380,17 +381,14 @@ background-color:#F5F4FA;
 /*-------Фільтри--*/
 .list-filters {
   display: flex;
+  justify-content: center;
   align-items: center;
    gap: 8px;
-   margin-left: auto;
-   margin-right: auto;
 
 }
 .button-filters {
-  display: flex;
-  align-items: center;
-  margin-right: 8px;
-  margin-bottom: 50px;
+
+margin-bottom: 50px;
 
 }
 .button {
@@ -421,11 +419,11 @@ background-color:#F5F4FA;
   border-radius: 4px;
 }
 .portfolio-wrapper{
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: center;
+
+
   border:1px solid #EEEEEE;
-  border-top: none;
+ 
+  padding: 20px 24px;
 }
 .title-portfolio {
   margin-bottom: 4px;
